# Lumos-AI

./: .gitignore
lumos/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
lumos/app/: __main__.py
lumos/app/agent/: orchestrator.py
lumos/app/providers/: mock.py
lumos/app/retrieval/: service.py
lumos/app/static/: app.js
lumos/app/web/: searxng.py
lumos/docs/: architecture.md  extending.md
lumos/evals/: README.md  harness.py  questions.json  run_eval.py
lumos/evals/notes/car/: estate.md  (+2 more)
lumos/lumos/: __main__.py  cli.py  config.py  main.py  schemas.py
lumos/lumos/agent/: orchestrator.py  prompts.py
lumos/lumos/api/: routes.py
lumos/lumos/core/: container.py
lumos/lumos/graph/: extract.py  service.py  store.py
lumos/lumos/memory/: database.py
lumos/lumos/notes/: ingestor.py
lumos/lumos/providers/: base.py  echo.py  mock.py  ollama.py  openai_compatible.py  router.py
lumos/lumos/retrieval/: chunker.py  relevance.py  service.py
lumos/lumos/static/: app.js  index.html  styles.css
lumos/lumos/tools/: builtin.py
lumos/lumos/web/: ddgs_provider.py  searxng.py  service.py
lumos/lumos_personal_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lumos/notes/: README.md
lumos/tests/: test_chunker.py  test_cli.py  test_database.py  test_eval_corpus.py  test_graph_api.py  test_graph_extract.py  test_graph_ingest.py  test_graph_service.py  test_ingestor.py  test_memory_relevance.py  test_orchestrator.py  test_provider_checks.py  test_provider_config.py  test_relevance.py  test_retrieval_expansion.py  test_router.py  test_tools.py
(+98 files in other folders)
