[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumos-personal-ai"
version = "0.1.0"
description = "Python-first private personal AI system with local-first model routing, SQLite memory, notes retrieval, web search, and allowlisted tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lumos Project" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "ddgs>=9.14,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
  "mypy>=1.15,<2.0",
]

[project.scripts]
lumos = "lumos.__main__:main"

[tool.setuptools.packages.find]
include = ["lumos*"]


[tool.setuptools.package-data]
"lumos.static" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
